clusters/k4/kubernetes/apps/flux-system/flux-instance/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: flux-instance
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: flux
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: flux
  egress:
    - toEntities:
        - world
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: flux
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: "ANY"
          rules:
            dns:
              - matchPattern: "*"
    # Mandatory for L7 filtering to work
    - toFQDNs:
        - matchPattern: "*.*.svc.cluster.local."
        - matchPattern: "*.*.*.svc.cluster.local."
        - matchPattern: "*.*.*.*.svc.cluster.local."
        - matchPattern: "*.*.*.*.*.svc.cluster.local."
        - matchPattern: "*.*.*.*.*.*.svc.cluster.local."
